--- a/Note/note.tex
+++ b/Note/note.tex
@@ -227,7 +227,7 @@
     % subsection event_image (end)
     \subsection{Mixed datasets}% (fold)
     \label{sub:mixed_datasets}
-        Based on figure~\ref{fig:mjj_deta_distribution}, we set selection cuts of $m_{jj} > 300$ GeV and $\Delta\eta_{jj} > 3.1$. We consider three cases: applying each cut individually and applying both cuts simultaneously. These cuts define the signal region (SR), which is VBF-like, and the background region (BR), which is GGF-like. Table~\ref{tab:GGF_VBF_Higgs_cutflow_number_mixed_dataset} summarizes the cutflow results for different selection criteria.
+        Based on figure~\ref{fig:mjj_deta_distribution}, we set selection cuts of $m_{jj} > 300$ GeV and $\Delta\eta_{jj} > 3.1$. We consider three cases: applying each cut individually and simultaneously. These cuts define the signal region (SR), which is VBF-like, and the background region (BR), which is GGF-like. Table~\ref{tab:GGF_VBF_Higgs_cutflow_number_mixed_dataset} summarizes the cutflow results for different selection criteria.
         \begin{table}[htpb]
             \centering
             \caption{Number of passing events and passing rates for GGF and VBF Higgs production under different selection cuts.}
@@ -277,71 +277,72 @@
             }
         \end{table}
     % subsection mixed_datasets (end)
-    \subsection{Training CNN}% (fold)
-    \label{sub:training_cnn}
-        The total sample sizes are mentioned in section~\ref{sub:mixed_datasets}. We allocate 80\% of the data for training and 20\% for validation. The testing set consists of the SR's 10,000 VBF and 10,000 GGF events.
+% section sample_preparation (end)
+\section{Training CNN}% (fold)
+\label{sec:training_cnn}
+    The total sample sizes are mentioned in section~\ref{sub:mixed_datasets}. We allocate 80\% of the data for training and 20\% for validation. The testing set consists of the SR's 10,000 VBF and 10,000 GGF events.
 
-        The convolutional neural network (CNN) model structure is summarized in figure~\ref{fig:cnn_model_structure}. The internal node uses the rectified linear unit (ReLU) as the activation function. The loss function is the binary cross-entropy. The \verb|Adam| optimizer minimizes the loss value. The learning rate is $10^{-4}$, and the batch size is 512. We employ the early stopping technique to prevent over-training issues with a patience of 10.
-        \begin{figure}[htpb]
-            \centering
-            \begin{tikzpicture}[
-                layer/.style={draw, rounded corners, minimum width=2.5cm, text centered},
-                arrow/.style={-stealth, thick},
-                node distance=0.25cm,
-            ]
-            % Input layer
-            \node (input) [layer, fill=blue!20,] {Input: $40 \times 40 \times 3$};
+    The convolutional neural network (CNN) model structure is summarized in figure~\ref{fig:cnn_model_structure}. The internal node uses the rectified linear unit (ReLU) as the activation function. The loss function is the binary cross-entropy. The \verb|Adam| optimizer minimizes the loss value. The learning rate is $10^{-4}$, and the batch size is 512. We employ the early stopping technique to prevent over-training issues with a patience of 10.
+    \begin{figure}[htpb]
+        \centering
+        \begin{tikzpicture}[
+            layer/.style={draw, rounded corners, minimum width=2.5cm, text centered},
+            arrow/.style={-stealth, thick},
+            node distance=0.25cm,
+        ]
+        % Input layer
+        \node (input) [layer, fill=blue!20,] {Input: $40 \times 40 \times 3$};
 
-            % Jet 1 layers
-            \node (bn1) [below=of input, layer, fill=purple!20] {BatchNorm};
-
-
-            % Conv1_1 layer positioned between bn1 and bn2
-            \node (conv1_1) [below=0.25cm of bn1, layer, fill=green!20] {Conv2D 64, $5 \times 5$, MaxPool $2 \times 2$};
-
-            % Other Conv layers
-            \node (conv2_1) [below=of conv1_1, layer, fill=green!20] {Conv2D 64, $5 \times 5$, MaxPool $2 \times 2$};
-            \node (conv3_1) [below=of conv2_1, layer, fill=green!20] {Conv2D 128, $3 \times 3$, MaxPool $2 \times 2$};
-            \node (conv4_1) [below=of conv3_1, layer, fill=green!20] {Conv2D 128, $3 \times 3$};
-
-            % Dense layers
-            \node (flatten1) [below=of conv4_1, layer, fill=pink!20] {Flatten};
-            \node (dense1_1) [below=of flatten1, layer, fill=red!20] {Dense 128};
-            \node (dense2_1) [below=of dense1_1, layer, fill=red!20] {Dense 128};
-            \node (dense3_1) [below=of dense2_1, layer, fill=red!20] {Dense 128};
-            \node (output1) [below=of dense3_1, layer, fill=red!20] {Dense (Output layer) 1};
+        % Jet 1 layers
+        \node (bn1) [below=of input, layer, fill=purple!20] {BatchNorm};
 
 
-            % Arrows for BN
-            \draw [arrow] (input) -- (bn1);
-            \draw [arrow] (bn1) -- (conv1_1);
-            \draw [arrow] (conv1_1) -- (conv2_1);
-            \draw [arrow] (conv2_1) -- (conv3_1);
-            \draw [arrow] (conv3_1) -- (conv4_1);
-            \draw [arrow] (conv4_1) -- (flatten1);
-            \draw [arrow] (flatten1) -- (dense1_1);
-            \draw [arrow] (dense1_1) -- (dense2_1);
-            \draw [arrow] (dense2_1) -- (dense3_1);
-            \draw [arrow] (dense3_1) -- (output1);
+        % Conv1_1 layer positioned between bn1 and bn2
+        \node (conv1_1) [below=0.25cm of bn1, layer, fill=green!20] {Conv2D 64, $5 \times 5$, MaxPool $2 \times 2$};
 
-            \end{tikzpicture}
-            \caption{The architecture of the CNN model with key hyperparameters.}
-            \label{fig:cnn_model_structure}
-        \end{figure}
+        % Other Conv layers
+        \node (conv2_1) [below=of conv1_1, layer, fill=green!20] {Conv2D 64, $5 \times 5$, MaxPool $2 \times 2$};
+        \node (conv3_1) [below=of conv2_1, layer, fill=green!20] {Conv2D 128, $3 \times 3$, MaxPool $2 \times 2$};
+        \node (conv4_1) [below=of conv3_1, layer, fill=green!20] {Conv2D 128, $3 \times 3$};
 
-        The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results}. The performance of the $\Delta\eta_{jj}$ cuts is better than the $m_{jj}$ cut. Moreover, when both cuts are applied together, the performance is slightly worse than when applying either cut individually.
-        \begin{table}[htpb]
-            \centering
-            \caption{The CNN training results. The ACC and AUC are evaluated based on 10 training. The selection cuts of $m_{jj} > \text{300 GeV}$ and $\Delta\eta_{jj} > 3.1$ are applied.}
-            \label{tab:CWoLa_CNN_training_results}
-            \begin{tabular}{l|cc|cc}
-                                          & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
-                Cut                       & ACC               & AUC               & ACC               & AUC               \\ \hline
-                $m_{jj}$                  & $0.712 \pm 0.023$ & $0.741 \pm 0.041$ & $0.576 \pm 0.010$ & $0.596 \pm 0.014$ \\
-                $\Delta\eta_{jj}$         & $0.828 \pm 0.043$ & $0.889 \pm 0.050$ & $0.604 \pm 0.014$ & $0.630 \pm 0.015$ \\
-                $m_{jj}, \Delta\eta_{jj}$ & $0.753 \pm 0.022$ & $0.792 \pm 0.035$ & $0.573 \pm 0.007$ & $0.596 \pm 0.008$
-            \end{tabular}
-        \end{table}
+        % Dense layers
+        \node (flatten1) [below=of conv4_1, layer, fill=pink!20] {Flatten};
+        \node (dense1_1) [below=of flatten1, layer, fill=red!20] {Dense 128};
+        \node (dense2_1) [below=of dense1_1, layer, fill=red!20] {Dense 128};
+        \node (dense3_1) [below=of dense2_1, layer, fill=red!20] {Dense 128};
+        \node (output1) [below=of dense3_1, layer, fill=red!20] {Dense (Output layer) 1};
+
+
+        % Arrows for BN
+        \draw [arrow] (input) -- (bn1);
+        \draw [arrow] (bn1) -- (conv1_1);
+        \draw [arrow] (conv1_1) -- (conv2_1);
+        \draw [arrow] (conv2_1) -- (conv3_1);
+        \draw [arrow] (conv3_1) -- (conv4_1);
+        \draw [arrow] (conv4_1) -- (flatten1);
+        \draw [arrow] (flatten1) -- (dense1_1);
+        \draw [arrow] (dense1_1) -- (dense2_1);
+        \draw [arrow] (dense2_1) -- (dense3_1);
+        \draw [arrow] (dense3_1) -- (output1);
+
+        \end{tikzpicture}
+        \caption{The architecture of the CNN model with key hyperparameters.}
+        \label{fig:cnn_model_structure}
+    \end{figure}
+
+    The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results}. The performance of the $\Delta\eta_{jj}$ cuts is better than the $m_{jj}$ cut. Moreover, when both cuts are applied together, the performance is slightly worse than when applying either cut individually.
+    \begin{table}[htpb]
+        \centering
+        \caption{The CNN training results. The ACC and AUC are evaluated based on 10 training. The selection cuts of $m_{jj} > \text{300 GeV}$ and $\Delta\eta_{jj} > 3.1$ are applied.}
+        \label{tab:CWoLa_CNN_training_results}
+        \begin{tabular}{l|cc|cc}
+                                      & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+            Cut                       & ACC               & AUC               & ACC               & AUC               \\ \hline
+            $m_{jj}$                  & $0.712 \pm 0.023$ & $0.741 \pm 0.041$ & $0.576 \pm 0.010$ & $0.596 \pm 0.014$ \\
+            $\Delta\eta_{jj}$         & $0.828 \pm 0.043$ & $0.889 \pm 0.050$ & $0.604 \pm 0.014$ & $0.630 \pm 0.015$ \\
+            $m_{jj}, \Delta\eta_{jj}$ & $0.753 \pm 0.022$ & $0.792 \pm 0.035$ & $0.573 \pm 0.007$ & $0.596 \pm 0.008$
+        \end{tabular}
+    \end{table}
     % subsection training_cnn (end)
     \subsection{More events}% (fold)
     \label{sub:more_events}
@@ -387,7 +388,94 @@
             \end{tabular}
         \end{table}
     % subsection more_events (end)
-% section sample_preparation (end)
+% section training_cnn (end)
+\section{\texorpdfstring{$p_{\mathrm{T}}$}{pT} normalization}% (fold)
+\label{sec:pt_normalization}
+    
+    To remove the potential dependence of the input samples on $m_{jj}$, we standardize the event images to remove the difference in input data distributions between the SR and BR. We calculate the mean and standard deviation of the event image transverse momentum and use these values to standardize each event image. We standardize each channel separately.
+    
+    The number of events in the SR and BR are the same as previously in table~\ref{tab:number_of_event_in_mixed_dataset_3000}.
+
+    The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm}. The $m_{jj}$ cut performs better than the previous one (table~\ref{tab:CWoLa_CNN_training_results_3000}). 
+    \begin{table}[htpb]
+        \centering
+        \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of $m_{jj} > \text{300 GeV}$ and $\Delta\eta_{jj} > 3.1$ are applied. }
+        \label{tab:CWoLa_CNN_training_results_3000_pT_norm}
+        \begin{tabular}{l|cc|cc}
+                                      & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+            Cut                       & ACC               & AUC               & ACC               & AUC               \\ \hline
+            $m_{jj}$                  & $0.874 \pm 0.004$ & $0.946 \pm 0.003$ & $0.624 \pm 0.005$ & $0.663 \pm 0.006$ \\
+            $\Delta\eta_{jj}$         & $0.928 \pm 0.005$ & $0.979 \pm 0.002$ & $0.597 \pm 0.005$ & $0.630 \pm 0.006$ \\
+            $m_{jj}, \Delta\eta_{jj}$ & $0.917 \pm 0.003$ & $0.973 \pm 0.002$ & $0.603 \pm 0.004$ & $0.636 \pm 0.006$
+        \end{tabular}
+    \end{table}
+
+% section pt_normalization (end)
+\section{Different cut setting}% (fold)
+\label{sec:different_cut_setting}
+    
+    We set selection cuts of $m_{jj} > 225$ GeV and $\Delta\eta_{jj} > 2.3$ to ensure the SR and BR datasets have similar sizes. Table~\ref{tab:GGF_VBF_Higgs_cutflow_number_mixed_dataset_225_2.3} summarizes the cutflow results for different selection criteria.
+    \begin{table}[htpb]
+        \centering
+        \caption{Number of passing events and passing rates for GGF and VBF Higgs production under different selection cuts.}
+        \label{tab:GGF_VBF_Higgs_cutflow_number_mixed_dataset_225_2.3}
+        \begin{tabular}{l|rr|rr}
+            Cut                                & GGF    & pass rate & VBF    & pass rate \\ \hline
+            Total                              & 100000 & 1.00      & 100000 & 1.00      \\
+            $n_{\gamma}$ cut                   & 9302   & 0.09      & 42860  & 0.43      \\
+            $n_j$ cut                          & 9302   & 0.09      & 42860  & 0.43      \\
+            $m_{\gamma\gamma}$ cut             & 8864   & 0.09      & 40694  & 0.41      \\ \hline
+            $m_{jj}$ cut: SR                   & 3638   & 0.04      & 32993  & 0.33      \\
+            $m_{jj}$ cut: BR                   & 5226   & 0.05      & 7701   & 0.08      \\ \hline
+            $\Delta\eta_{jj}$ cut: SR          & 3611   & 0.04      & 32914  & 0.33      \\
+            $\Delta\eta_{jj}$ cut: BR          & 5253   & 0.05      & 7780   & 0.08      \\ \hline
+            $m_{jj}, \Delta\eta_{jj}$ cuts: SR & 2842   & 0.03      & 31113  & 0.31      \\
+            $m_{jj}, \Delta\eta_{jj}$ cuts: BR & 4457   & 0.04      & 5900   & 0.06     
+        \end{tabular}
+    \end{table}
+
+    Assuming the luminosity of $\mathcal{L} = \text{3000 fb}^{-1}$, we can estimate the number of events belonging to the SR and BR. These results are summarized in table~\ref{tab:number_of_event_in_mixed_dataset_225_2.3}
+    \begin{table}[htpb]
+        \centering
+        \caption{The number of events of mixed datasets under different selection cuts.}
+        \label{tab:number_of_event_in_mixed_dataset_225_2.3}
+        \subfloat[$m_{jj} > 225$ GeV]{
+            \begin{tabular}{c|cc}
+                   & GGF & VBF \\ \hline
+                BR & 19457 & 2244 \\
+                SR & 13544 & 9612
+            \end{tabular}
+        }
+        \subfloat[$\Delta\eta_{jj} > 2.3$]{
+            \begin{tabular}{c|cc}
+                   & GGF & VBF \\ \hline
+                BR & 19557 & 2267 \\
+                SR & 13444 & 9589
+            \end{tabular}
+        } \\
+        \subfloat[$m_{jj} > 225$ GeV, \newline $\Delta\eta_{jj} > 2.3$]{
+            \begin{tabular}{c|cc}
+                   & GGF & VBF \\ \hline
+                BR & 16594 & 1719 \\
+                SR & 10581 & 9064
+            \end{tabular}
+        }
+    \end{table}
+
+    The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3}. The results are better than the table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm} by 1\%. Similarly, the $m_{jj}$ cut performs best. 
+    \begin{table}[htpb]
+        \centering
+        \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of $m_{jj} > \text{225 GeV}$ and $\Delta\eta_{jj} > 2.3$ are applied.}
+        \label{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3}
+        \begin{tabular}{l|cc|cc}
+                                      & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+            Cut                       & ACC               & AUC               & ACC               & AUC               \\ \hline
+            $m_{jj}$                  & $0.864 \pm 0.004$ & $0.940 \pm 0.004$ & $0.632 \pm 0.006$ & $0.673 \pm 0.007$ \\
+            $\Delta\eta_{jj}$         & $0.913 \pm 0.006$ & $0.972 \pm 0.003$ & $0.605 \pm 0.007$ & $0.640 \pm 0.009$ \\
+            $m_{jj}, \Delta\eta_{jj}$ & $0.896 \pm 0.007$ & $0.961 \pm 0.004$ & $0.616 \pm 0.005$ & $0.653 \pm 0.006$
+        \end{tabular}
+    \end{table}
+% section different_cut_setting (end)
 \bibliographystyle{ieeetr}
 \bibliography{reference}
 
