--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1305,6 +1305,296 @@
     "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
     "        data['model_name'] = f'quark_jet_2_cut_pT_aug_{aug}_{i:02}'\n",
     "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, pT smearing: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $\\phi$ shifting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_5_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_5_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_5_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_5_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_5_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_5_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_5_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_5_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_5_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_5_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 5\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_phi_aug_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_10_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_10_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_10_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_10_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_10_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_10_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_10_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_10_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_10_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_10_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 10\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_phi_aug_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_15_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_15_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_15_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_15_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_15_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_15_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_15_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_15_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_15_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_15_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 15\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_phi_aug_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $\\eta-\\phi$ smearing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_5_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_5_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_5_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_5_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_5_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_5_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_5_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_5_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_5_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_5_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 5\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/eta_phi_smearing/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eta_phi_aug_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, eta-phi smearing: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_10_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_10_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_10_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_10_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_10_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_10_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_10_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_10_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_10_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_10_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 10\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/eta_phi_smearing/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eta_phi_aug_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, eta-phi smearing: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_15_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_15_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_15_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_15_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_15_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_15_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_15_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_15_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_15_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_15_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 15\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_eta_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/eta_phi_smearing/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eta_phi_aug_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, eta-phi smearing: +{aug}'\n",
     "\n",
     "        json.dump(data, f, indent=4)\n",
     "\n",
